@@ -1,5 +1,5 @@
 /*
- * Copyright © Wynntils 2022-2023.
+ * Copyright © Wynntils 2022-2024.
  * This file is released under LGPLv3. See LICENSE for full license details.
  */
 package com.wynntils.overlays;
@@ -27,8 +27,9 @@ import java.util.Collections;
 import java.util.LinkedList;
 import java.util.List;
 import java.util.ListIterator;
+import net.minecraft.client.DeltaTracker;
 import net.minecraft.client.renderer.MultiBufferSource;
-import net.minecraftforge.eventbus.api.SubscribeEvent;
+import net.neoforged.bus.api.SubscribeEvent;
 
 public class GameNotificationOverlay extends Overlay {
     @Persisted
@@ -75,7 +76,7 @@ public class GameNotificationOverlay extends Overlay {
         messageQueue.add(new TimedMessageContainer(event.getMessageContainer(), getMessageDisplayLength()));
 
         if (overrideNewMessages.get() && messageQueue.size() > messageLimit.get()) {
-            messageQueue.remove(0);
+            messageQueue.removeFirst();
         }
     }
 
@@ -92,8 +93,14 @@ public class GameNotificationOverlay extends Overlay {
                         timedMessageContainer -> timedMessageContainer.resetRemainingTime(getMessageDisplayLength()));
     }
 
+    @SubscribeEvent
+    public void onGameNotification(NotificationEvent.Remove event) {
+        messageQueue.removeIf(timedMessageContainer ->
+                timedMessageContainer.getMessageContainer().equals(event.getMessageContainer()));
+    }
+
     @Override
-    public void render(PoseStack poseStack, MultiBufferSource bufferSource, float partialTicks, Window window) {
+    public void render(PoseStack poseStack, MultiBufferSource bufferSource, DeltaTracker deltaTracker, Window window) {
         List<TimedMessageContainer> toRender = new ArrayList<>();
 
         ListIterator<TimedMessageContainer> messages = messageQueue.listIterator(messageQueue.size());
@@ -136,8 +143,8 @@ public class GameNotificationOverlay extends Overlay {
 
         if (this.invertGrowth.get()) {
             while (renderedValues.size() < messageLimit.get()) {
-                renderedValues.add(0, new TimedMessageContainer(new MessageContainer(""), (long)
-                        (this.messageTimeLimit.get() * 1000)));
+                renderedValues.addFirst(new TimedMessageContainer(
+                        new MessageContainer(""), (long) (this.messageTimeLimit.get() * 1000)));
             }
         }
 
@@ -154,7 +161,9 @@ public class GameNotificationOverlay extends Overlay {
                                                 .getRenderTask()
                                                 .getSetting()
                                                 .customColor()
-                                                .withAlpha(messageContainer.getRemainingTime() / 1000f))))
+                                                // A minimum alpha is required, otherwise too small values render with
+                                                // max alpha
+                                                .withAlpha(messageContainer.getRemainingTime() / 1000f + 0.01f))))
                                 .toList(),
                         this.getWidth(),
                         this.getHeight(),
@@ -163,7 +172,8 @@ public class GameNotificationOverlay extends Overlay {
     }
 
     @Override
-    public void renderPreview(PoseStack poseStack, MultiBufferSource bufferSource, float partialTicks, Window window) {
+    public void renderPreview(
+            PoseStack poseStack, MultiBufferSource bufferSource, DeltaTracker deltaTracker, Window window) {
         BufferedFontRenderer.getInstance()
                 .renderTextWithAlignment(
                         poseStack,
